-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs24, hs25
-
Component/s: hotspot
-
b43
-
generic
-
solaris
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8021912 | 8 | Unassigned | P2 | Closed | Fixed | b101 |
| JDK-8021719 | 7u60 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8021504 | 7u51 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8021456 | 7u45 | Unassigned | P2 | Closed | Fixed | b05 |
| JDK-8021065 | 7u40 | Unassigned | P2 | Resolved | Fixed | b35 |
| JDK-8020504 | hs24 | Peter Allwin | P2 | Resolved | Fixed | b54 |
java.io.IOException: Bad file number
at sun.tools.attach.SolarisVirtualMachine.enqueue(Native Method)
at sun.tools.attach.SolarisVirtualMachine.execute(SolarisVirtualMachine.java:131)
at sun.tools.attach.HotSpotVirtualMachine.executeCommand(HotSpotVirtualMachine.java:217)
at sun.tools.attach.HotSpotVirtualMachine.remoteDataDump(HotSpotVirtualMachine.java:174)
We should investigate further, but time is slipping for 7u6. Suggest defer for 7u8 so we can get a grip on it. We already have an engineer assigned, so we're not afraid that it will slip under radar.
Ok to defer to 7u8
dev /nloodin
sqe / ctornqvi
- backported by
-
JDK-8020504 Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand
-
- Resolved
-
-
JDK-8021065 Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand
-
- Resolved
-
-
JDK-8021504 Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand
-
- Resolved
-
-
JDK-8021719 Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand
-
- Resolved
-
-
JDK-8021456 Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand
-
- Closed
-
-
JDK-8021912 Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand
-
- Closed
-
- duplicates
-
JDK-8001464 jinfo intermittently fails with 'Connection refused' message
-
- Closed
-
-
JDK-8007540 Failed to execute DCMD due to "IOException: Bad file number"
-
- Closed
-
-
JDK-8015957 Several tmtools tests failed on Solaris with 'java.io.IOException: Bad file number'
-
- Closed
-
- relates to
-
JDK-8021771 warning: stat64 is deprecated - when building on OSX 10.7.5
-
- Closed
-