7162400: Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand

Intermittent java.io.IOException: Bad file number during HotSpotVirtualMachine.executeCommand

Reviewed-by: dcubed, dholmes, sspitsyn, mgerdin, ctornqvi, dsamersoff